fixed test failures/ modified script/json